<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/top_pannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_section"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_lang_img"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/language_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:textSize="@dimen/selection_text_size"
                android:theme="@style/Spinner.Blue"
                />


        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_padding"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:padding="@dimen/text_vertical_padding"
            android:textSize="18sp"
            android:text="@string/subscription_yearly_text"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/yearly_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearly_price"
                android:textColor="@android:color/white"
                android:textSize="@dimen/price_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/yearly_price"
                android:layout_marginTop="@dimen/text_vertical_padding"
                android:text="@string/yearly_price_caption"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/buy_yearly"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/button_rectangle"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_padding"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="@dimen/text_vertical_padding"
            android:text="@string/subscription_monthly_text"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/monthly_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_price"
                android:textColor="@android:color/white"
                android:textSize="@dimen/price_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/monthly_price"
                android:layout_marginTop="@dimen/text_vertical_padding"
                android:text="@string/monthly_price_caption"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/buy_monthly"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/button_rectangle"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>



    </LinearLayout>

</ScrollView>