<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/eula_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/eula_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_margin="40dp"
        />


    <TextView
        android:id="@+id/eula_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textColorLink="#0000EE"
        android:textSize="@dimen/eula_text_size" />

    <CheckBox
        android:id="@+id/accept_eula_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:buttonTint="@color/white"
        android:text="@string/eula_accept_btn"
        android:textAllCaps="false"
        android:checked="true"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />


    <Button
        android:id="@+id/eula_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/full_version"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:background="@drawable/button_rounded_white"
        android:textSize="@dimen/selection_text_size" />

    <Button
        android:id="@+id/eula_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/demo_version"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:background="@drawable/button_rounded_white"
        android:textSize="@dimen/selection_text_size" />

</LinearLayout>
